# email-with-secret

./: .gitignore  CLAUDE.md  README.md  compose.yml  config.dev.ini  config.ini.example  example.csv  plan-to-execute.md  pyproject.toml  send.py
templates/: default.html.j2
