[tool.poetry]
name = "email-with-secret"
version = "0.1.0"
description = "Send personalised one-time secret links via email from a CSV file"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
jinja2 = "^3.1"
requests = "^2.32"

[tool.poetry.scripts]
send = "send:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
